# mailutils

./: .gitignore  .gitmodules  ChangeLog.amend  GNUmakefile  Makefile.am  NEWS  README  README-alpha  README-hacking  THANKS  TODO  bootstrap  bootstrap.conf  configure.ac  gnulib.modules  maint.mk  paths
imap4d/: Makefile.am  append.c  auth_gsasl.c  auth_gss.c  authenticate.c  bye.c  capability.c  check.c  close.c  commands.c  copy.c  create.c  delete.c  examine.c  expunge.c  fetch.c  id.c  idle.c  imap4d.c  imap4d.h  io.c  list.c  login.c  logout.c  lsub.c  namespace.c  noop.c  parsebuf.c  preauth.c  quota.c  rename.c  search.c  select.c  signal.c  starttls.c  status.c  store.c  subscribe.c  sync.c  uid.c  (+4 more)
imap4d/tests/: .gitignore  IDEF0955.at  IDEF0956.at  Makefile.am  anystate.at  append00.at  append01.at  atlocal.in  ckiconv.c  close-expunge.at  clt_list.at  create01.at  create02.at  examine.at  expunge.at  fetch.at  id.at  list.at  search.at  select.at  status.at  testclient.c  testsuite.at
libmailutils/mimetypes/: .gitignore  Makefile.am  eval.c  grammar.y  lexer.l
libmailutils/tests/: .gitignore  Makefile.am  addr.c  address.at  atlocal.in  base64d.at  base64e.at  cidr.c  content-type.at  conttype.c  crlf.at  crlfdot.at  ctm.at  ctm.c  debugspec.at  debugspec.c  decode2047.at  decode2047.c  dot.at  dump.c  encode2047.at  encode2047.c  exp.at  exp.c  fltcnt.at  fltcnt.c  fltst.c  fromflt.at  fromrb.at  fromrd.at  fsaf.at  fsaf.c  fsaftomod.at  fsaftomod.c  fsfolder.c  fsfolder00.at  fsfolder01.at  fsfolder02.at  fsfolder03.at  fsfolder04.at  (+131 more)
libmu_scm/tests/: Makefile.am  address-count.at  address-domain.at  address-email.at  address-local.at  address-personal.at  atlocal.in  bodyp.at  const.at  mailbox-append-message.at  mailbox-expunge.at  mailbox-get-message.at  mailbox-get-size.at  mailbox-get-url.at  mailbox-iterate.at  mailbox-messages-count.at  mailbox-open-exc.at  mailbox-open.at  mailbox-print.at  message-body-port.at  message-body.at  message-create.at  message-delete.at  message-get-envelope-date.at  message-get-envelope.at  message-get-flag.at  message-get-header-fields.at  message-get-header.at  message-get-lines.at  message-get-num-parts.at  message-get-part.at  message-get-sender.at  message-get-size.at  message-multipart.at  message-port-1.at  message-port-2.at  message-port-read-1.at  message-port-read-2.at  message-print.at  message-set-header-fields.at  (+8 more)
libmu_sieve/: Makefile.am  actions.c  comparator.c  conf.c  encoded.c  environment.c  load.c  mem.c  prog.c  registry.c  relational.c  require.c  runtime.c  sieve-gram.y  sieve-lex.l  sieve-priv.h  sieve.l  sieve.y  strexp.c  string.c  tests.c  util.c  variables.c
libmu_sieve/extensions/: Makefile.am  editheader.c  list.c  moderator.c  pipe.c  spamd.c  timestamp.c  vacation.c
libproto/: Makefile.am
libproto/dotmail/: Makefile.am  dotmail.c  folder.c  message.c
libproto/imap/: Makefile.am  appmsg.c  appstr.c  appstrsiz.c  callback.c  capability.c  capatst.c  carrier.c  check.c  close.c  connect.c  copy.c  create.c  delete.c  destroy.c  disconnect.c  err.c  expunge.c  fetch.c  folder.c  gencom.c  genlist.c  id.c  list.c  login.c  logout.c  lsub.c  mailbox.c  mbcreate.c  mbox.c  noop.c  rename.c  resplist.c  response.c  resproc.c  search.c  select.c  starttls.c  state.c  status.c  (+8 more)
libproto/maildir/: Makefile.am  folder.c  maildir.c  maildir.h  mbox.c
libproto/mailer/: Makefile.am  mailbox.c  mbox.c  prog.c  sendmail.c  smtp.c  smtp_auth.c  smtp_capa.c  smtp_capa_itr.c  smtp_carrier.c  smtp_cmd.c  smtp_create.c  smtp_data.c  smtp_disconnect.c  smtp_dot.c  smtp_ehlo.c  smtp_gsasl.c  smtp_io.c  smtp_mail.c  smtp_mech.c  smtp_open.c  smtp_param.c  smtp_quit.c  smtp_rcpt.c  smtp_rset.c  smtp_secret.c  smtp_send.c  smtp_starttls.c  smtp_trace.c  smtp_url.c
libproto/mbox/: Makefile.am  folder.c  mbox.c  mbox0.h  mboxrb.c  mboxrd.c  mboxscan.c  message.c
libproto/mboxrb/: Makefile.am  mboxrb.c  message.c
libproto/mh/: Makefile.am  folder.c  mbox.c  mh.c  profile.c
libproto/nntp/: Makefile.am  folder.c  mbox.c  nntp0.h  nntp_article.c  nntp_body.c  nntp_carrier.c  nntp_connect.c  nntp_create.c  nntp_date.c  nntp_debug.c  nntp_destroy.c  nntp_disconnect.c  nntp_group.c  nntp_head.c  nntp_help.c  nntp_ihave.c  nntp_iterator.c  nntp_last.c  nntp_list_active.c  nntp_list_distribpats.c  nntp_list_distributions.c  nntp_list_extensions.c  nntp_list_newsgroups.c  nntp_list_times.c  nntp_mode_reader.c  nntp_newgroups.c  nntp_newnews.c  nntp_next.c  nntp_post.c  nntp_quit.c  nntp_readline.c  nntp_response.c  nntp_sendline.c  nntp_stat.c  nntp_stream.c  nntp_timeout.c  url.c
libproto/pop/: Makefile.am  folder.c  mailbox.c  mbox.c  pop3_apop.c  pop3_capa.c  pop3_capatst.c  pop3_carrier.c  pop3_connect.c  pop3_create.c  pop3_dele.c  pop3_destroy.c  pop3_disconnect.c  pop3_iterator.c  pop3_list.c  pop3_list_cmd.c  pop3_lista.c  pop3_listas.c  pop3_noop.c  pop3_pass.c  pop3_quit.c  pop3_rdlist.c  pop3_readline.c  pop3_response.c  pop3_retr.c  pop3_rset.c  pop3_sendline.c  pop3_stat.c  pop3_stls.c  pop3_stream.c  pop3_timeout.c  pop3_top.c  pop3_trace.c  pop3_uidl.c  pop3_uidl_cmd.c  pop3_uidla.c  pop3_uidlas.c  pop3_user.c  url.c
libtests/: .gitignore  Makefile.am  atlocal.in  fldel.at  fldel.c  mbdel.at  mbdel.c  mime.at  mime01.at  mimetest.c  testsuite.at
mail/tests/: D.at  Followup.at  Makefile.am  Reply.at  align.at  atlocal.in  cols00.at  cols01.at  copy00.at  copy01.at  copy02.at  copy03.at  copy04.at  followup.at  hold.at  nohome.at  reply.at  send.at  sendbyname.at  (+3 more)
mda/: .gitignore  Makefile.am  lmtpd.c  mda.c
movemail/: Makefile.am  movemail.c
readmsg/: Makefile.am  msglist.c  readmsg.c  readmsg.h
testsuite/: .gitignore  Makefile.am  atlocal.in  bs.c  cwdrepl.at  cwdrepl.c  fldel.at  fldel.c  lstuid.c  lstuid00.at  lstuid01.at  lstuid02.at  mbdel.at  mbdel.c  mbop.c  mbox2dir.c  mime.at  mime01.at  mimetest.c  mockmail.at  mockmail.c  mockmta.at  mockmta.c  msgset.c  package.m4.in  smtp-msg.at  smtp-str.at  smtpsend.c  testsuite.am  testsuite.at  testsuite.inc  ufms.at  ufms.c
(+1654 files in other folders)
