# This file is part of GNU Mailutils.
# Copyright (C) 2018-2019 Free Software Foundation, Inc.
#
# GNU Mailutils is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 3, or (at
# your option) any later version.
#
# GNU Mailutils is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Mailutils.  If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/testsuite/testsuite.am

TESTSUITE_AT += \
 const.at\
 mailbox-open.at\
 mailbox-open-exc.at\
 mailbox-print.at\
 mailbox-get-url.at\
 mailbox-messages-count.at\
 mailbox-get-message.at\
 mailbox-iterate.at\
 mailbox-get-size.at\
 message-create.at\
 message-print.at\
 address-count.at\
 address-domain.at\
 address-local.at\
 address-email.at\
 address-personal.at\
 message-port-1.at\
 message-port-2.at\
 message-body.at\
 bodyp.at\
 message-get-size.at\
 message-get-lines.at\
 message-get-envelope.at\
 message-get-envelope-date.at\
 message-get-sender.at\
 message-get-header-fields.at\
 message-get-header.at\
 message-port-read-1.at\
 message-port-read-2.at\
 message-set-header.at\
 message-set-header-fields.at\
 message-multipart.at\
 message-get-num-parts.at\
 message-get-part.at\
 mailbox-append-message.at\
 message-delete.at\
 message-get-flag.at\
 mailbox-expunge.at\
 mime-create.at\
 mime-p.at\
 mime-multipart-p.at\
 mime-get-num-parts.at\
 mime-get-part.at\
 mime-add-part.at



