# This file is part of GNU Mailutils.
# Copyright (C) 2007-2021 Free Software Foundation, Inc.
#
# GNU Mailutils is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 3, or (at
# your option) any later version.
#
# GNU Mailutils is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Mailutils.  If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/testsuite/testsuite.am

TESTSUITE_AT +=\
 D.at\
 align.at\
 cols00.at\
 cols01.at\
 copy00.at\
 copy01.at\
 copy02.at\
 copy03.at\
 copy04.at\
 nohome.at\
 hold.at\
 testsuite.at\
 version.at

