# This file is part of GNU Mailutils.
# Copyright (C) 2007-2019 Free Software Foundation, Inc.
#
# GNU Mailutils is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 3, or (at
# your option) any later version.
#
# GNU Mailutils is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Mailutils.  If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/testsuite/testsuite.am
EXTRA_DIST += mhed movemsg

## -------------------------- ##
## Non-installable programs   ##
## -------------------------- ##

AM_CPPFLAGS = $(MU_LIB_COMMON_INCLUDES)
noinst_PROGRAMS = lu

TESTSUITE_AT += \
 ali.at\
 anno.at\
 burst.at\
 comp.at\
 fmtcomp.at\
 fmtcnd00.at\
 fmtfunc.at\
 folder.at\
 forw.at\
 inc.at\
 install-mh.at\
 mark.at\
 mhl.at\
 mhn.at\
 mhparam.at\
 mhpath.at\
 mhseq.at\
 pick.at\
 scan.at\
 send.at\
 sortm.at\
 refile.at\
 repl.at\
 rmf.at\
 rmm.at



