# This file is part of GNU Mailutils.
# Copyright (C) 2007-2021 Free Software Foundation, Inc.
#
# GNU Mailutils is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 3, or (at
# your option) any later version.
#
# GNU Mailutils is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Mailutils.  If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/testsuite/testsuite.am
EXTRA_DIST += moderator.mbox
TESTSUITE_AT += \
  action.at\
  addheader.at\
  address.at\
  allof.at\
  anyof.at\
  delheader.at\
  compile.at\
  enc-char.at\
  envelope.at\
  environment.at\
  exists.at\
  ext.at\
  false.at\
  header.at\
  i-casemap.at\
  i-numeric.at\
  i-octet.at\
  list.at\
  moderator.at\
  mul-addr.at\
  not.at\
  pipeact.at\
  pipetest.at\
  redirect.at\
  reject.at\
  relational.at\
  size.at\
  true.at\
  vacation.at\
  variables.at\
  version.at
